--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -14,12 +14,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install django
-        pip install pylint-django
-        pip install pylint
+        pip install -r requirements.txt
     - name: Analysing the code with pylint
       run: |
          pylint $(git ls-files '*.py')
