--- a/.pylintrc
+++ b/.pylintrc
@@ -2,5 +2,5 @@
 load-plugins=pylint_django
 django-settings-module=core.settings
 disable=C0114, W1514, R0901
-ignore = manage.py, apps.py, 0001_initial.py
+ignore = manage.py, apps.py, 0001_initial.py, 0002_memory_created_at.py
 max-line-length=120
